--- a/src/main/resources/dev/fraco/minikeep/createNote.fxml
+++ b/src/main/resources/dev/fraco/minikeep/createNote.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ColorPicker?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.Color?>
-
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.CreateNote">
-   <VBox layoutX="155.0" layoutY="33.0" prefHeight="548.0" prefWidth="492.0">
+   <VBox layoutX="153.0" layoutY="66.0" prefHeight="468.0" prefWidth="493.0">
       <Label text="Titulo" />
       <TextField fx:id="titleInput" promptText="Un titulo creativo">
          <VBox.margin>
@@ -27,38 +19,40 @@
          </VBox.margin>
       </TextField>
       <Label text="Cuerpo" />
-      <TextArea fx:id="bodyInput" prefHeight="200.0" prefWidth="200.0">
+      <TextArea fx:id="bodyInput" prefHeight="139.0" prefWidth="493.0" wrapText="true">
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
       </TextArea>
       <HBox prefHeight="54.0" prefWidth="493.0">
-         <children>
-            <VBox prefHeight="67.0" prefWidth="246.0">
-               <children>
-                  <Label text="Color" />
-                  <ColorPicker fx:id="colorInput">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <value>
-                        <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009" />
-                     </value>
-                  </ColorPicker>
-               </children>
-            </VBox>
-            <VBox prefHeight="200.0" prefWidth="250.0">
-               <children>
-                  <Label text="Prioridad" />
-                  <ComboBox prefWidth="150.0" promptText="Normal" />
-               </children>
-            </VBox>
-         </children>
+         <VBox prefHeight="67.0" prefWidth="246.0">
+            <Label text="Color"/>
+            <ColorPicker fx:id="colorInput">
+               <VBox.margin>
+                  <Insets bottom="10.0"/>
+               </VBox.margin>
+               <value>
+                  <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009"/>
+               </value>
+            </ColorPicker>
+         </VBox>
+         <VBox prefHeight="200.0" prefWidth="250.0">
+            <Label text="Prioridad"/>
+            <ChoiceBox fx:id="priorityCombo" prefWidth="150.0"/>
+         </VBox>
+         <VBox prefHeight="200.0" prefWidth="250.0">
+            <Label text="Fecha de Recordatorio"/>
+            <DatePicker>
+               <VBox.margin>
+                  <Insets bottom="30.0"/>
+               </VBox.margin>
+            </DatePicker>
+         </VBox>
       </HBox>
       <Label text="Colaboradores (email separados por coma)" />
       <TextField fx:id="collaboratorsInput" promptText="amigo1@g.com, amigo2@a.cl, amigo3@vv.cl ...">
          <VBox.margin>
-            <Insets bottom="30.0" />
+            <Insets bottom="10.0" />
          </VBox.margin>
       </TextField>
       <HBox alignment="CENTER" prefHeight="43.0" prefWidth="493.0" spacing="30.0">
