--- a/src/main/resources/dev/fraco/minikeep/trash.fxml
+++ b/src/main/resources/dev/fraco/minikeep/trash.fxml
@@ -1,14 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="dev.fraco.minikeep.controllers.Trash"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Trash">
+    <VBox prefHeight="600.0" prefWidth="801.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="802.0" spacing="50.0">
+            <Button mnemonicParsing="false" text="Volver Atras">
+            <HBox.margin>
+               <Insets left="20.0" />
+            </HBox.margin></Button>
+        </HBox>
+        <Label text="Doble click para eliminar permanentemente">
+            <VBox.margin>
+                <Insets left="10.0" top="20.0" />
+            </VBox.margin></Label>
+        <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0">
+            <columns>
+                <TableColumn fx:id="colHeader" onEditStart="#deleteNote" prefWidth="211.44286853075027" text="Titulo" />
+                <TableColumn fx:id="colPriority" onEditStart="#deleteNote" prefWidth="310.1827850341797" text="Prioridad" />
+                <TableColumn fx:id="colTags" onEditStart="#deleteNote" prefWidth="77.7950439453125" text="Tags" />
+                <TableColumn fx:id="colColor" onEditStart="#deleteNote" prefWidth="59.84228515625" text="Color" />
+                <TableColumn fx:id="colCreated" onEditStart="#deleteNote" prefWidth="69.8160400390625" text="Creada" />
+                <TableColumn fx:id="colEdited" onEditStart="#deleteNote" prefWidth="62.83447265625" text="Editada" />
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+            </columnResizePolicy>
+        </TableView>
+    </VBox>
 </AnchorPane>
