--- a/src/main/resources/dev/fraco/minikeep/workspace.fxml
+++ b/src/main/resources/dev/fraco/minikeep/workspace.fxml
@@ -1,30 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
    <VBox prefHeight="600.0" prefWidth="801.0">
-      <HBox prefHeight="100.0" prefWidth="200.0">
-         <Button mnemonicParsing="false" text="Crear Nota"/>
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="802.0" spacing="50.0">
+         <Button onMouseClicked="#moveToCreateNote" mnemonicParsing="false" text="Crear Nueva Nota" />
+         <Button onMouseClicked="#moveToTheTrash" mnemonicParsing="false" text="Abrir Papelera" />
+         <Button onMouseClicked="#moveToLogin" mnemonicParsing="false" text="Cerrar Sesion" />
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin>
       </HBox>
-      <TableView fx:id="notesTable" editable="true" prefHeight="490.0" prefWidth="127.0">
+      <VBox prefHeight="60.0" prefWidth="561.0">
+
+         <Label text="Buscar:" />
+         <TextField />
+         <VBox.margin>
+            <Insets left="100.0" right="100.0" />
+         </VBox.margin>
+      </VBox>
+      <Label text="Doble click para abrir y modificar">
+         <VBox.margin>
+            <Insets top="20.0" />
+         </VBox.margin></Label>
+      <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0">
          <columns>
-            <TableColumn fx:id="colHeader" onEditCancel="#cancelEdit" onEditCommit="#commitEdit"
-                         onEditStart="#startEdit" prefWidth="169.55328112840652" text="Titulo"/>
-            <TableColumn fx:id="colPriority" prefWidth="90.7608642578125" text="Prioridad"/>
-            <TableColumn fx:id="colTags" prefWidth="130.65573120117188" text="Tags"/>
-            <TableColumn fx:id="colColor" prefWidth="35.9053955078125" text="Color"/>
-            <TableColumn fx:id="colCreated" prefWidth="75.0" text="Creada"/>
-            <TableColumn fx:id="colEdited" prefWidth="75.0" text="Editada"/>
+            <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="211.44286853075027" text="Titulo" />
+            <TableColumn fx:id="colPriority" onEditStart="#startEdit" prefWidth="310.1827850341797" text="Prioridad" />
+            <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="77.7950439453125" text="Tags" />
+            <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="59.84228515625" text="Color" />
+            <TableColumn fx:id="colCreated" onEditStart="#startEdit" prefWidth="69.8160400390625" text="Creada" />
+            <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="62.83447265625" text="Editada" />
          </columns>
          <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
    </VBox>
