--- a/src/main/resources/dev/fraco/minikeep/createNote.fxml
+++ b/src/main/resources/dev/fraco/minikeep/createNote.fxml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ColorPicker?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
+
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.CreateNote">
    <VBox layoutX="153.0" layoutY="66.0" prefHeight="468.0" prefWidth="493.0">
       <Label text="Titulo" />
@@ -26,25 +36,25 @@
       </TextArea>
       <HBox prefHeight="54.0" prefWidth="493.0">
          <VBox prefHeight="67.0" prefWidth="246.0">
-            <Label text="Color"/>
+            <Label text="Color" />
             <ColorPicker fx:id="colorInput">
                <VBox.margin>
-                  <Insets bottom="10.0"/>
+                  <Insets bottom="10.0" />
                </VBox.margin>
                <value>
-                  <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009"/>
+                  <Color red="0.7538405656814575" green="0.007187230046838522" blue="0.7795872092247009" />
                </value>
             </ColorPicker>
          </VBox>
          <VBox prefHeight="200.0" prefWidth="250.0">
-            <Label text="Prioridad"/>
-            <ChoiceBox fx:id="priorityCombo" prefWidth="150.0"/>
+            <Label text="Prioridad" />
+            <ChoiceBox fx:id="priorityCombo" prefWidth="150.0" />
          </VBox>
          <VBox prefHeight="200.0" prefWidth="250.0">
-            <Label text="Fecha de Recordatorio"/>
+            <Label text="Fecha de Recordatorio" />
             <DatePicker>
                <VBox.margin>
-                  <Insets bottom="30.0"/>
+                  <Insets bottom="30.0" />
                </VBox.margin>
             </DatePicker>
          </VBox>
@@ -55,6 +65,16 @@
             <Insets bottom="10.0" />
          </VBox.margin>
       </TextField>
+      <HBox fx:id="errorLabel" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #cc241d; -fx-border-radius: 8;" visible="false">
+         <VBox.margin>
+            <Insets bottom="10.0" top="10.0" />
+         </VBox.margin>
+         <Label text="Error en email y/o contraseña" textFill="#fff9e9">
+            <font>
+               <Font name="System Bold" size="13.0" />
+            </font>
+         </Label>
+      </HBox>
       <HBox alignment="CENTER" prefHeight="43.0" prefWidth="493.0" spacing="30.0">
          <Button mnemonicParsing="false" onAction="#backHandler" text="Volver Atras" />
          <Button mnemonicParsing="false" onAction="#addHandler" text="Añadir Nota" />
