--- a/src/main/resources/dev/fraco/minikeep/sign-in.fxml
+++ b/src/main/resources/dev/fraco/minikeep/sign-in.fxml
@@ -8,44 +8,66 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.SignIn">
-   <VBox layoutX="250.0" layoutY="142.0" prefHeight="200.0" prefWidth="300.0">
-      <Label text="Nombre"/>
+<AnchorPane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #282828;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.SignIn">
+   <VBox alignment="CENTER" layoutX="240.0" layoutY="-21.0" prefHeight="154.0" prefWidth="317.0">
+      <Label text="Crear Cuenta" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="43.0" />
+         </font>
+      </Label>
+   </VBox>
+   <VBox layoutX="249.0" layoutY="112.0" prefHeight="448.0" prefWidth="300.0">
+      <Label text="Nombre" textFill="WHITE" />
       <TextField fx:id="firstNameInput">
          <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
          </VBox.margin>
       </TextField>
-      <Label text="Apellido"/>
+      <Label text="Apellido" textFill="WHITE" />
       <TextField fx:id="lastNameInput">
          <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
          </VBox.margin>
-      </TextField >
-      <Label text="Numero de matricula"/>
+      </TextField>
+      <Label text="Numero de matricula" textFill="WHITE" />
       <TextField fx:id="registrationNumberInput">
          <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
          </VBox.margin>
       </TextField>
-      <Label text="Correo"/>
-      <TextField fx:id="emailInput" >
+      <Label text="Correo" textFill="WHITE" />
+      <TextField fx:id="emailInput">
          <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
          </VBox.margin>
       </TextField>
-      <Label text="Fecha de Nacimiento"/>
+      <Label text="Telefono" textFill="WHITE" />
+      <TextField fx:id="phoneInput">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </TextField>
+      <Label text="Fecha de Nacimiento" textFill="WHITE" />
       <DatePicker fx:id="dateInput">
          <VBox.margin>
-            <Insets bottom="20.0"/>
+            <Insets bottom="20.0" />
          </VBox.margin>
       </DatePicker>
+      <HBox fx:id="errorBox" alignment="CENTER" prefHeight="58.0" prefWidth="300.0" style="-fx-background-color: #cc241d; -fx-border-radius: 8;" visible="false">
+         <VBox.margin>
+            <Insets bottom="10.0" top="10.0" />
+         </VBox.margin>
+         <Label fx:id="errorLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="57.0" prefWidth="300.0" text="Error en email y/o contraseña" textAlignment="CENTER" textFill="#fff9e9" wrapText="true">
+            <font>
+               <Font name="System Bold" size="13.0" />
+            </font>
+         </Label>
+      </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-         <Button onAction="#backHandler" mnemonicParsing="false" text="Volver Atras"/>
-         <Button onAction="#submitHandler" mnemonicParsing="false" text="Crear Cuenta"/>
+         <Button mnemonicParsing="false" onAction="#backHandler" text="Volver Atras" />
+         <Button mnemonicParsing="false" onAction="#submitHandler" text="Crear Cuenta" />
       </HBox>
    </VBox>
 </AnchorPane>
