--- a/src/main/resources/dev/fraco/minikeep/trash.fxml
+++ b/src/main/resources/dev/fraco/minikeep/trash.fxml
@@ -12,7 +12,7 @@
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Trash">
     <VBox prefHeight="600.0" prefWidth="801.0">
         <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="802.0" spacing="50.0">
-            <Button mnemonicParsing="false" text="Volver Atras">
+            <Button onAction="#backHandler" mnemonicParsing="false" text="Volver Atras">
             <HBox.margin>
                <Insets left="20.0" />
             </HBox.margin></Button>
