--- a/src/main/resources/dev/fraco/minikeep/workspace.fxml
+++ b/src/main/resources/dev/fraco/minikeep/workspace.fxml
@@ -10,43 +10,40 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.fraco.minikeep.controllers.Workspace">
     <VBox prefHeight="600.0" prefWidth="801.0" style="-fx-background-color: #323232;">
         <HBox alignment="CENTER" prefHeight="50.0" prefWidth="802.0" spacing="50.0">
-            <Button mnemonicParsing="false" onMouseClicked="#moveToCreateNote" text="Crear Nueva Nota"/>
-            <Button mnemonicParsing="false" onMouseClicked="#moveToTheTrash" text="Abrir Papelera"/>
-            <Button mnemonicParsing="false" onMouseClicked="#moveToLogin" text="Cerrar Sesion"/>
+            <Button mnemonicParsing="false" onAction="#moveToCreateNote" text="Crear Nueva Nota" />
+            <Button mnemonicParsing="false" onAction="#moveToTheTrash" text="Abrir Papelera" />
+            <Button mnemonicParsing="false" onAction="#moveToLogin" text="Cerrar Sesion" />
             <VBox.margin>
-                <Insets top="20.0"/>
+                <Insets top="20.0" />
             </VBox.margin>
         </HBox>
         <VBox prefHeight="60.0" prefWidth="561.0">
 
-            <Label text="Buscar:" textFill="WHITE"/>
-            <TextField/>
+            <Label text="Buscar:" textFill="WHITE" />
+            <TextField fx:id="searchBar" onKeyTyped="#searchHandler" />
             <VBox.margin>
-                <Insets left="100.0" right="100.0"/>
+                <Insets left="100.0" right="100.0" />
             </VBox.margin>
         </VBox>
         <Label text="Doble click para abrir y modificar" textFill="WHITE">
             <VBox.margin>
-                <Insets top="20.0"/>
+                <Insets top="20.0" />
             </VBox.margin>
         </Label>
-        <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0"
-                   style="-fx-background-color: #464646;">
+        <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0">
             <columns>
-                <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="211.44286853075027" text="Titulo"/>
-                <TableColumn fx:id="colPriority" onEditStart="#startEdit" prefWidth="310.1827850341797"
-                             text="Prioridad"/>
-                <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="77.7950439453125" text="Tags"/>
-                <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="59.84228515625" text="Color"/>
-                <TableColumn fx:id="colCreated" onEditStart="#startEdit" prefWidth="69.8160400390625" text="Creada"/>
-                <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="62.83447265625" text="Editada"/>
+                <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="211.44286853075027" text="Titulo" />
+                <TableColumn fx:id="colPriority" onEditStart="#startEdit" prefWidth="310.1827850341797" text="Prioridad" />
+                <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="77.7950439453125" text="Tags" />
+                <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="59.84228515625" text="Color" />
+                <TableColumn fx:id="colCreated" onEditStart="#startEdit" prefWidth="69.8160400390625" text="Creada" />
+                <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="62.83447265625" text="Editada" />
             </columns>
             <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
     </VBox>
