--- a/src/main/resources/dev/fraco/minikeep/workspace.fxml
+++ b/src/main/resources/dev/fraco/minikeep/workspace.fxml
@@ -35,12 +35,12 @@
         </Label>
         <TableView fx:id="notesTable" editable="true" prefHeight="516.0" prefWidth="802.0">
             <columns>
-                <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="211.44286853075027" text="Titulo" />
-                <TableColumn fx:id="colPriority" onEditStart="#startEdit" prefWidth="310.1827850341797" text="Prioridad" />
-                <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="77.7950439453125" text="Tags" />
-                <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="59.84228515625" text="Color" />
-                <TableColumn fx:id="colCreated" onEditStart="#startEdit" prefWidth="69.8160400390625" text="Creada" />
-                <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="62.83447265625" text="Editada" />
+                <TableColumn fx:id="colColor" onEditStart="#startEdit" prefWidth="30.0" resizable="false" />
+                <TableColumn fx:id="colHeader" onEditStart="#startEdit" prefWidth="341.10133171081543" text="Titulo" />
+                <TableColumn fx:id="colTags" onEditStart="#startEdit" prefWidth="107.7161865234375" text="Tag" />
+                <TableColumn fx:id="colPriority" minWidth="0.0" onEditStart="#startEdit" resizable="false" text="Prioridad" />
+                <TableColumn fx:id="colCreated" minWidth="1.0" onEditStart="#startEdit" prefWidth="120.0" resizable="false" text="Creada" />
+                <TableColumn fx:id="colEdited" onEditStart="#startEdit" prefWidth="120.0" resizable="false" text="Editada" />
             </columns>
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
